--- a/array-methods/7-array/index.html
+++ b/array-methods/7-array/index.html
@@ -11,36 +11,65 @@
     <script>
       // Go through todo.md before start solving.
       function countAllPeople() {
-        // your code goes here
-        console.log(got);
+        // your code goes here0
+                return got.houses.reduce((acc , cv ) => {
+                      acc = acc + cv.people.length;
+		                  return acc
+                    }, 0)
+                console.log(got);
       }
 
       function peopleByHouses() {
-        // your code goes here
+        return got.houses.reduce((acc , cv) => {
+				acc[cv.name] = cv.people.length;
+				return acc
+        }, {})
       }
 
       function everyone() {
         // your code goes here
+      	return got.houses.reduce((acc , cv) =>{
+            acc = acc.concat(cv.people.map(elm => elm.name));
+            return acc;
+        }, [])
       }
 
       function nameWithS() {
         // your code goes here
+        return got.houses.reduce((acc , cv) =>{
+			      acc = acc.concat(cv.people.map(i => i.name)).filter(j => j.toLowerCase().includes("s"));
+         	  return acc;
+        }, [])
       }
+          
 
       function nameWithA() {
         // your code goes here
+		    return got.houses.reduce((acc , cv) =>{
+				  acc = acc.concat(cv.people.map(i => i.name)).filter(i => i.toLowerCase().includes("a"));
+				  return acc
+      }, [])
       }
-
       function surnameWithS() {
         // your code goes here
+				return got.houses.reduce((acc , cv) =>{
+					acc = acc.concat(cv.people.map(i => i.name)).filter(j => j.split(" ")[1].toLowerCase().includes("s"))
+					return acc;
+        }, []);
       }
-
-      function surnameWithA() {
-        // your code goes here
+      function surnameWithA(){
+        return got.houses.reduce((acc , cv) => {
+              acc = acc.concat(cv.people.map(i => i.name)).filter(j => j.split(" ")[1].toLowerCase().includes("a"))
+		    return acc
+       }, []);
       }
 
       function peopleNameOfAllHouses() {
         // your code goes here
+        return got.houses.reduce((acc , cv) =>{
+            acc[cv.name] = cv.people.map(i => i.name);
+            return acc;
+        }, {});
       }
 
       // Testing your result after writing your function
